--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <script src="https://js.jotform.com/JotFormCustomWidget.min.js"></script> 
     <title>bar</title>
 
     <style type="text/css" media="screen">
@@ -31,9 +32,8 @@
     <tbody class="tbody" id="t">
       <tr class="mytab" id="x" style="cursor: pointer">  
    
-        
+        <div id="textBar"></div>
       </tr>
-         <div id="textBar"></div>
     </tbody>
   </table>
   
@@ -41,10 +41,20 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript">
 
+  JFCustomWidget.subscribe("submit", function() {
+      var result = {value:"", valid: false};
+      result.value = document.getElementById("textBar").value;
+      result.valid = true;
+   
+      JFCustomWidget.sendSubmit(result);
+    });
+
+
   var userInput= 10;
   for(var i = 0; i < userInput; i++){
-     $(".mytab").append('<td id="light-'+i+'"></td>');
+     $(".mytab").append('<td id="light-'+i+'"></td><div id="textBar-'+i+'"></div>');
      $("#light-" + i).hover(myfun);
+     $("#textBar-"+ i).hover(myfun);
      
    
   } 
