--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   JFCustomWidget.subscribe("submit", function() {
       var result = {value:"", valid: false};
-      result.value = document.getElementById("textBar").value;
+      result.value = document.getElementById("light").value;
       result.valid = true;
    
       JFCustomWidget.sendSubmit(result);
