--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <tbody class="tbody" id="t">
       <tr class="mytab" id="x" style="cursor: pointer">  
    
-        <div id="textBar"></div>
+        <div id="textBar" selected="selected"></div>
       </tr>
     </tbody>
   </table>
@@ -43,7 +43,7 @@
 
   JFCustomWidget.subscribe("submit", function() {
       var result = {value:"", valid: false};
-      result.value = document.getElementById("textBar").value;
+      result.value = document.getElementById("textBar").value + "#textbar";
       result.valid = true;
    
       JFCustomWidget.sendSubmit(result);
@@ -73,7 +73,15 @@
     }
     
   }
-
+$( "select" )
+  .change(function() {
+    var str = "";
+    $( "select option:selected" ).each(function() {
+      str += $( this ).text() + " ";
+    });
+    $( "div" ).text( str );
+  })
+  .trigger( "change" );
       
   </script>
 </body>
